[gd_scene load_steps=3 format=3 uid="uid://bsjr3dwsbpnws"]

[ext_resource type="Script" uid="uid://btg6jnmuvrwjm" path="res://vertex/vertex.gd" id="1_fxce1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0jg42"]

[node name="Vertex" type="Marker2D" groups=["save"]]
script = ExtResource("1_fxce1")

[node name="ClickableArea" type="Area2D" parent="."]

[node name="ClickableShape" type="CollisionShape2D" parent="ClickableArea"]
shape = SubResource("CircleShape2D_0jg42")

[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
